--- a/UnitTestExample.Test/packages.config
+++ b/UnitTestExample.Test/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net48" />
-  <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net48" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net48" />
+  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="NuGet.Common" version="5.8.0" targetFramework="net48" />
+  <package id="NuGet.Configuration" version="5.8.0" targetFramework="net48" />
+  <package id="NuGet.Frameworks" version="5.8.0" targetFramework="net48" />
+  <package id="NuGet.Packaging" version="5.8.0" targetFramework="net48" />
+  <package id="NuGet.Versioning" version="5.8.0" targetFramework="net48" />
 </packages>
