--- a/UnitTestExample.Test/packages.config
+++ b/UnitTestExample.Test/packages.config
@@ -8,4 +8,5 @@
   <package id="NuGet.Frameworks" version="5.8.0" targetFramework="net48" />
   <package id="NuGet.Packaging" version="5.8.0" targetFramework="net48" />
   <package id="NuGet.Versioning" version="5.8.0" targetFramework="net48" />
+  <package id="NUnit" version="3.12.0" targetFramework="net48" />
 </packages>
